--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
     width: 50%;
     padding-left: 2%;
+
 
 }
 
@@ -34,8 +36,49 @@ section {
     text-decoration: none;
     color: white;
     background-image: linear-gradient(tomato, orange);
-    padding: 10px 20px;
+    padding: 10px 40px;
     border: 5px solid;
     border-radius: 10px;
     font-weight: 700;
+}
+
+.big-dream {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+
+}
+
+.Exprence-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+#web-developer {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+    background-color: white;
+
+}
+
+#web-developer-dev {
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(205, 228, 5), rgb(240, 18, 74));
+    border-image-slice: 1;
+}
+
+footer {
+    text-align: center;
 }
